--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,8 +1,12 @@
+.noRestaurantText{
+    text-align: center;
+}
 .restaurantContainer{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     column-gap: 20px;
     row-gap: 20px;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
